@@ -42,54 +42,23 @@ scalar truncationError_global =
 scalar truncationError_C =
     runTime.controlDict().lookupOrDefault<scalar>("truncationError_C",truncationError_global);
 
-word timeScheme(mesh.ddtScheme("ddt(" + composition.Y(0).name() + ')'));
-
 scalar maxDeltaT =
     runTime.controlDict().lookupOrDefault<scalar>("maxDeltaT", GREAT);
 
-EulerD3dt3Scheme d3dt3Operator(mesh,runTime.deltaTValue());
-Foam::fv::EulerD2dt2Scheme<scalar> d2dt2Operator(mesh);
-scalarList dCdTmax(composition.Y().size());
-scalarList dC2dT2max(composition.Y().size());
-scalarList dC3dT3max(composition.Y().size());
-scalarList Cmax(composition.Y().size());
+PtrList<timestepManager> dtManager(0);
+forAll(composition.Y(), speciei)
+{
+    dtManager.append(new timestepManager(runTime, composition.Y()[speciei], truncationError_C));
+}
 
 if (adjustTimeStep)
 {
-    //- Derivative initialisation to keep 1st user-defined time step
-    if (timeScheme == "backward")
-    {
-        forAll(composition.Y(), speciesi)
-        {
-            const auto& C = composition.Y(speciesi);
-            Cmax[speciesi] = gMax(C.internalField());
-            dC3dT3max[speciesi] = 3*truncationError_C*(Cmax[speciesi]+VSMALL)/Foam::pow(runTime.deltaTValue(),3);
-        }
-    }
-    else if  (timeScheme == "CrankNicolson")
-    {
-        forAll(composition.Y(), speciesi)
-        {
-            const auto& C = composition.Y(speciesi);
-            Cmax[speciesi] = gMax(C.internalField());
-            dC3dT3max[speciesi] = 12*truncationError_C*(Cmax[speciesi]+VSMALL)/Foam::pow(runTime.deltaTValue(),3);
-        }
-    }
-    else if (timeScheme == "Euler")
-    {
-        forAll(composition.Y(), speciesi)
-        {
-            const auto& C = composition.Y(speciesi);
-            Cmax[speciesi] = gMax(C.internalField());
-            dC2dT2max[speciesi] = 2*truncationError_C*(Cmax[speciesi]+VSMALL)/Foam::pow(runTime.deltaTValue(),2);
-        }
-    }
     Info << "Timestepping is based on time-scheme truncation error with :"
         << nl << "{"
         << nl << "    truncationError = " << truncationError_C
         << nl << "}"
         << endl;
-}
+ }
 
 const bool eventTimeTracking =
     runTime.controlDict().lookupOrDefault("eventTimeTracking", false);
